example/errors/interpret/expected_block_after_condition.box
when true


println("this is not a block");
println("this is not a block");
